--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,23 @@
-html, body, #viewDiv {
+html,body, #viewDiv {
     padding: 0;
     margin: 0;
     height: 100%;
     width: 100%;
-    }
+    font-size: 120%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #B59494;
+    color: #5C4141;
+}
+
+body {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-areas: container viewDiv;
+    justify-content: center;
+    align-items: center;
+}
+
+h1, #instrucao, #layer_list {
+    padding-right: 5%;
+    padding-left: 5%;
+}
