--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,12 @@ body {
     align-items: center;
 }
 
-h1, #instrucao, #layer_list {
+h1 {
     padding-right: 5%;
     padding-left: 5%;
+}
+
+#instrucao, #layer_list {
+    padding-right: 10%;
+    padding-left: 10%;
 }
